--- a/src/App.css
+++ b/src/App.css
@@ -248,3 +248,40 @@ i[class*='dessert--type'] {
   text-decoration: underline;
   font-weight: 600;
 }
+
+/*host--desserts*/
+.host--ds--title {
+  padding-inline: 30px;
+  font-size: 30px;
+}
+.host--ds--ls {
+  padding-inline: 30px;
+}
+
+.ls--ds--one {
+  display: flex;
+  align-items: center;
+  background-color: #d7e8ba;
+  margin-bottom: 20px;
+  padding-block: 20px;
+  padding-left: 30px;
+  padding-right: 20px;
+}
+
+.ls--ds--one > img {
+  height: 100px;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.host--ds--info h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-block: 10px;
+}
+.host--ds--info p {
+  margin-block: 10px;
+}
+.host--ds--total {
+  margin-top: 40px;
+}
