--- a/src/App.css
+++ b/src/App.css
@@ -355,3 +355,31 @@ i[class*='dessert--type'] {
   font-weight: 200;
   color: #4d4d4d;
 }
+
+.ds--list--filter--button {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 30px;
+  gap: 10px;
+}
+
+.ds--list--filter--button a {
+  margin-right: 15px;
+}
+
+/*notfound page*/
+.notfound--box {
+  padding-inline: 30px;
+  text-align: center;
+}
+.notfound--box a {
+  width: 100%;
+  background-color: #4da1a9;
+  color: white;
+  padding: 10px 5px;
+  text-decoration: none;
+  border-radius: 10px;
+}
+.notfound--box > img {
+  margin-top: 10px;
+}
